<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".Screen2">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_android"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="84dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/pinkish_cream"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/AD"
            android:textColor="@color/pink"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_web"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginTop="84dp"
        android:backgroundTint="@color/pinkish_cream"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_android"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/WD"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_ios"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/pinkish_cream"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_android">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/iOS"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_ml"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/pinkish_cream"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_ios"
        app:layout_constraintTop_toBottomOf="@+id/card_web">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ML"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_bc"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/pinkish_cream"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_ios">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/BC"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_graphic"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/pinkish_cream"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_bc"
        app:layout_constraintTop_toBottomOf="@+id/card_ml">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Gd"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/call_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:text="@string/call"
        app:icon="@android:drawable/sym_call_outgoing"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_graphic"
        app:layout_constraintVertical_bias="0.441" />


</androidx.constraintlayout.widget.ConstraintLayout>